--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>세종충북도박문제예방치유센터 애플리케이션</title>
+    <title>세종충북도박문제예방치유센터 - 앱 다운로드</title>
   </head>
   <body>
     <div id="root"></div>
